--- a/src/appsco-manage-account-page.html
+++ b/src/appsco-manage-account-page.html
@@ -763,6 +763,14 @@
 
             reloadResourceAdmins: function() {
                 this.$.appscoDirectoryRoleResourceAdminApplicationsPage.reloadResourceAdmins();
+            },
+
+            showAdvanced: function() {
+                this.$.appscoManageAccountComponentsPage.showAdvanced();
+            },
+
+            hideAdvanced: function() {
+                this.$.appscoManageAccountComponentsPage.hideAdvanced();
             }
 
         });
