--- a/src/directory/appsco-manage-account-page-actions.html
+++ b/src/directory/appsco-manage-account-page-actions.html
@@ -4,6 +4,7 @@
 <link rel="import" href="../../bower_components/neon-animation/animations/fade-in-animation.html">
 <link rel="import" href="../../bower_components/neon-animation/animations/fade-out-animation.html">
 <link rel="import" href="../../bower_components/paper-icon-button/paper-icon-button.html">
+<link rel="import" href="../../bower_components/paper-button/paper-button.html">
 <link rel="import" href="../../bower_components/iron-media-query/iron-media-query.html">
 
 <dom-module id="appsco-manage-account-page-actions">
@@ -13,6 +14,7 @@
                 @apply(--layout-horizontal);
                 @apply(--layout-center);
                 @apply(--layout-end-justified);
+                @apply(--appsco-account-actions);
             }
             :host > * {
                 height: 100%;
@@ -37,11 +39,31 @@
             :host([tablet-screen]) .info-action {
                 display: block;
             }
+            :host .advanced-settings-button {
+                @apply(--account-advanced-settings-action);
+                @apply(--primary-button);
+                margin-right: 10px;
+            }
+            :host .advanced-settings-button[active] {
+                @apply(--shadow-elevation-2dp);
+                @apply(--account-advanced-settings-action-active);
+                @apply(--primary-button-active);
+            }
+            :host .advanced-settings-button[disabled] {
+                opacity: 0.5;
+            }
         </style>
 
         <iron-media-query query="(max-width: 800px)" query-matches="{{ tabletScreen }}"></iron-media-query>
 
         <div class="global-page-actions">
+
+            <paper-button
+                    id="advancedSettingsAction"
+                    class="advanced-settings-button"
+                    toggles
+                    on-tap="_onAdvancedSettingsAction">Advanced settings</paper-button>
+
             <paper-icon-button
                     class="back-action"
                     icon="arrow-back"
@@ -67,6 +89,14 @@
                     type: Boolean,
                     value: false,
                     reflectToAttribute: true
+                },
+
+                /**
+                 * Indicates if advanced action(s) should be visible or not.
+                 */
+                advanced: {
+                    type: Boolean,
+                    value: false
                 },
 
                 /**
@@ -107,6 +137,41 @@
 
             _onResourceAction: function() {
                 this.fire('resource-section');
+            },
+
+            /**
+             * Called on account advanced settings action.
+             *
+             * @private
+             */
+            _onAdvancedSettingsAction: function() {
+
+                /**
+                 * Fired when advanced settings action is triggered.
+                 *
+                 * @event advanced-settings
+                 */
+                this.fire('advanced-settings', {
+                    showAdvanced: this.$$('#advancedSettingsAction').active
+                });
+            },
+
+            /**
+             * Disables advanced settings action.
+             */
+            disableAdvancedSettings: function() {
+                this.$$('#advancedSettingsAction').disabled = true;
+            },
+
+            /**
+             * Enables advanced settings action.
+             */
+            enableAdvancedSettings: function() {
+                this.$$('#advancedSettingsAction').disabled = false;
+            },
+
+            resetAdvancedSettingsAction: function() {
+                this.$$('#advancedSettingsAction').active = false;
             }
         });
     </script>
