--- a/src/appsco-app.html
+++ b/src/appsco-app.html
@@ -7346,11 +7346,11 @@
                 for (var i = 0; i < cookies.length; i++) {
                     var cookie = cookies[i];
 
-                    while (cookie.charAt(0) == ' ') {
+                    while (cookie.charAt(0) === ' ') {
                         cookie = cookie.substring(1);
                     }
 
-                    if (cookie.indexOf(name) == 0) {
+                    if (cookie.indexOf(name) === 0) {
                         return cookie.substring(name.length, cookie.length);
                     }
                 }
@@ -7369,7 +7369,7 @@
                 if (this._isLocalStorageSupported()) {
                     window.localStorage.setItem(key, value);
                 } else {
-                    var secure_cookie = Boolean(Number(this.cookieSecure)) == true ? ';secure' : '';
+                    var secure_cookie = Boolean(Number(this.cookieSecure)) === true ? ';secure' : '';
                     document.cookie = key + '=' + value + secure_cookie;
                 }
             },
